<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/grappi"
            android:icon="@drawable/ic_grappi"
            android:title="@string/grappi"/>
        <item
            android:id="@+id/create_topic"
            android:icon="@drawable/ic_create_topic"
            android:title="@string/create_topic" />
        <item
            android:id="@+id/add_relation"
            android:icon="@drawable/ic_add_relation"
            android:title="@string/add_relation" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_setting"
                android:title="@string/settings" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>-->

</menu>
